crates/stc_ts_file_analyzer/tests/pass/enum/asssignability/1.ts
// enums assignable to number, any, Object, errors unless otherwise noted


enum E { A }

var e = E.A;

module Others {
    var p: Number = e;
}

export { }
