crates/stc_ts_file_analyzer/tests/errors/conformance/types/primitives/void1.ts
// Type 'typeof E' is not assignable to type 'void'
var x: void;

enum E { A }
x = E;
x = E.A;
